# NuAutomate

./: inventory.yml  pyproject.toml  readme.md  setup_remote_workers.yml
templates/: nucypher.service.j2  sub_provider.py.j2
