[tool.poetry]
name = "nu-automate"
version = "0.1.0"
description = ""
authors = ["SeanXu <xuqingjian@sjtu.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.10.0"
paramiko = "^2.7.2"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
